Align fix and update the style

--- a/styles/CommitDialog.less
+++ b/styles/CommitDialog.less
@@ -1,9 +1,5 @@
 @import "ui-variables";
 
-.input-label .input-radio, .input-label .input-checkbox, .input-label .input-toggle {
-	margin-right: 10px;
-}
-
 .context-git.dialog {
 	.files {
 		width: 100%;
@@ -14,6 +10,10 @@
 
 		.file {
 			margin: 0 0 10px 0;
+
+			&:last-child {
+				margin: 0;
+			}
 
 			label.input-label {
 				display: inline-block;
